  - [Log2Timeline library] Added the possibility to use a dot (.) in the exclusion list.
      - Changed the exclusion list so it can be easily changed
      - Added a call to ->end on each input module if verification failed.
      - Minor bug fixes in the main engine.
      - Changed wording when an output module is loaded (from "Loading output file" to "Loading output module").
  - [CHROME input] - Slight changes to the output based on the value of the typed_count variable, also updated the path
  to the code that describes the transition types.
  - [SKYPE input] Fixed the verification routine a bit, cleaned it up slightly and fixed a small bug that caused the tool
  not to include SKYPE data when recursive mode was set on.
      - Also fixed UTF-8 support, should properly display UTF-8 by now.
  - [PREFETCH input] Small changes to the verification module.
  - [WinReg] Fixed a small bug in the code that caused the deleted entries lookup sometimes to loop forever.
  - [SQLITE output] Changed the way the SQLite code is written considerably, pre-compiling statements to prevent them
  being compiled for each insert, using transactions instead of writing them constantly to the DB, and other minor tweaks
  to make the DB output faster than before (since it was increadibly slow before).
  - [CHROME input] Small bug to fix UTF-8 support.
  - [FIREFOX3 input] Small bug to fix UTF-8 support.
  - [PREFETCH input] Fixed a bug, added a seekdir so that prefetch information is contained within the timeline if recursive
      is turned on.
  - [RECYCLER input] Fixed a bug, added a seekdir so that recycler information is contained within the timeline if recursive
      is turned on.
  - [LIST files] Added few items into the Windows list files, as well as to create a Mac OS X one.
  - [MFT input] Fixed a bug with Unicode support.

Version 0.63-1 (bug fixes) (09/10/2012)